--- a/package.json
+++ b/package.json
@@ -2,13 +2,25 @@
   "name": "RESTack",
   "description": "A REST api built for NodeJS",
   "version": "0.0.1",
-  "private": true,
   "dependencies": {
     "connect": "~2.8.4",
-    "mocha": "~1.12.0",
     "async": "~0.2.9",
     "express": "~3.3.4",
     "request": "~2.25.0",
     "jugglingdb": "~0.2.0-35"
+  },
+  "devDependencies": {
+
+    "mocha": "~1.12.0"
+
+  },
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js",
+    "test": "mocha"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/southbite/restack.git"
   }
 }
