--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
     "jugglingdb": "~0.2.0-35"
   },
   "devDependencies": {
-
-    "mocha": "~1.12.0"
-
+    "mocha": "~1.12.0",
+    "expect.js": "~0.2.0"
   },
   "main": "index.js",
   "scripts": {
