--- a/package.json
+++ b/package.json
@@ -7,12 +7,11 @@
     "async": "~0.2.9",
     "express": "~3.3.4",
     "request": "~2.25.0",
-    "jugglingdb": "~0.2.0-35"
+    "jugglingdb": "~0.2.0-35",
+    "mongodb": "~1.3.15"
   },
   "devDependencies": {
-
     "mocha": "~1.12.0"
-
   },
   "main": "index.js",
   "scripts": {
