--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "express": "~3.3.4",
     "request": "~2.25.0",
     "jugglingdb": "~0.2.0-35",
-    "mongodb": "~1.3.15"
+    "mongodb": "~1.3.15",
+    "redis": "~0.8.4",
+    "mailgun": "~0.4.2",
+    "string": "~1.5.1",
+    "underscore": "~1.5.2"
   },
   "devDependencies": {
     "mocha": "~1.12.0",
