--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "mailgun": "~0.4.2",
     "string": "~1.5.1",
     "underscore": "~1.5.2",
-    "node-uuid": "~1.4.1"
+    "node-uuid": "~1.4.1",
+    "bcrypt": "~0.7.7",
+    "jwt-simple": "~0.1.0",
+    "moment": "~2.3.1"
   },
   "devDependencies": {
     "mocha": "~1.12.0",
