--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "bcrypt": "~0.7.7",
     "jwt-simple": "~0.1.0",
     "moment": "~2.3.1",
-    "handlebars": "~1.0.12"
+    "handlebars": "~1.0.12",
+    "clone": "~0.1.11"
   },
   "devDependencies": {
     "mocha": "~1.12.0",
