--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "jwt-simple": "~0.1.0",
     "moment": "~2.3.1",
     "handlebars": "~1.0.12",
-    "clone": "~0.1.11"
+    "clone": "~0.1.11",
+    "node-redis-pubsub": "~0.2.1"
   },
   "devDependencies": {
     "mocha": "~1.12.0",
